add footer and nav

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <img src="img/smile.png" alt="" />
       </div>
     </div>
+    <footer>Copyright HayBris &amp; Pauly H (2016)</footer>
     </div>
   </body>
 </html>
